 * Add explicit synchronization facilities through semaphores
 * Bugfix: Task.setDataSize() only changed the C world, not the value
   cached in the Java world

 MSG:
 * Dramatically change the way files are handled. API and internals changed, but
   this part of MSG was not considered as production grade either.
 * Add explicit synchronization facilities through semaphores

 SMPI:
 * SMPI is now included directly in the libsimgrid as the windows
   linker dont forces us on splitting it anymore.
 * Improvements of the SMPI replay tool:
   - Most of the collective communications are now rooted in the same process as
     in the original application.
   - Traces now rely on the same MPI datatype as the application (MPI_BYTE was
     used until now). Multiple datatypes can now be used in a trace.
   - The replay tool now supports traces produce either by TAU or a modified
     version of MPE.
   - Bug Fix: the compute part of the reduce action is now taken into account.
 * smpirun generates the hostfile if needed (with given hostcount and platform)
 * Integration of more than 100 STAR-MPI, mpich, OpenMPI collective algorithms
   - allows to select one in particular with --cfg=smpi/coll_name:algorithm
   - allows to use the decision logic of OpenMPI(1.7) or MPICH(3.0.4) by setting
     --cfg=smpi/coll_selector:(mpich/ompi)
 * Support for new functions : MPI_Issend, MPI_Ssend, Commutative operations in 
   Reduce
 * Add a --cfg:tracing/smpi/internals option, to trace internal communications 
   happening inside a collective SMPI call.
 * Fix the behavior of complex datatypes handling
   

 PLATFORM:
 * Handle units for values (10ms, 10kiloflops, 10Bps, ...)
 * Remove rule based routing (no more pcre dependency)
 * Add a limiter_link option to cluster tag, to specify a maximum reachable
  bandwidth in fullduplex mode when it is < 2*nominal bw
 * Add a loopback_bw and loopback_lat options to cluster tag. 

-- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
