@@ -17,6 +17,7 @@ SimGrid (3.10) NOT RELEASED; urgency=low
  * Dramatically change the way files are handled. API and internals changed, but
    this part of MSG was not considered as production grade either.
  * Add explicit synchronization facilities through semaphores
+ * Add a new function MSG_host_get_process_list()
 
  SMPI:
  * SMPI is now included directly in the libsimgrid as the windows
